src/main/java/fr/ledcom/tj3/taskjugglerplugin/language/TaskJuggler.bnf
{
  parserClass="fr.ledcom.tj3.taskjugglerplugin.TJParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="TJ"
  psiImplClassSuffix="Impl"
  psiPackage="fr.ledcom.tj3.taskjugglerplugin.language.psi"
  psiImplPackage="fr.ledcom.tj3.taskjugglerplugin.language.psi.impl"

  elementTypeHolderClass="fr.ledcom.tj3.taskjugglerplugin.language.psi.TJTypes"
  elementTypeClass="fr.ledcom.tj3.taskjugglerplugin.language.psi.TJElementType"
  tokenTypeClass="fr.ledcom.tj3.taskjugglerplugin.language.psi.TJTokenType"

  tokens=[
    space="regexp:\s+"
    line_comment="regexp:#.*"
    STRING="regexp:('([^'\\]|\\.)*'|\"([^\"\\]|\\\"|\\\'|\\)*\")"
    INTEGER="\d+"
    FLOAT="\d+\.\d+"
    // Identifiers and names
    ID="regexp:[a-zA-Z_][a-zA-Z0-9_]*"

    L_CURLY="{"
    R_CURLY="}"
    DOT="."
    REL_ID_MARK='!'

    BASE_DATE="regexp:\d{4}-\d{2}-\d{2}(-\d{2}:\d{2}(:\d{2})?)?"
    DURATION_="regexp:\d+(min|h|d|w|m|y)"
  ]
}


taskJugglerFile ::= (TASK|PROJECT)*

TASK ::= 'task' [ID] STRING L_CURLY (task_attributes_)* R_CURLY
private task_attributes_ ::= (start|responsible|note|duration|depends|TASK)

PROJECT ::= 'project' [ID] STRING [STRING] INTERVAL2 L_CURLY (project_attributes_)* R_CURLY
private project_attributes_ ::= (currency|timezone)

start ::= 'start' DATE
responsible ::= 'responsible' ID
note ::= 'note' STRING
duration ::= 'duration' DURATION_
depends ::= 'depends' (RELATIVE_ID|ABSOLUTE_ID)

currency ::= 'currency' STRING
timezone ::= 'timezone' STRING

ABSOLUTE_ID ::= ID{DOT ID}*
RELATIVE_ID ::= REL_ID_MARK ID{DOT ID}*

DATE ::= ( BASE_DATE | '%' L_CURLY BASE_DATE ('+'|'-') DURATION_ R_CURLY )

INTERVAL2 ::= DATE ('-' DATE | '+' DURATION_)
